tests/cases/diff/terraform/tf_044_security_group.yaml
name: tf_044_security_group
initial:
  security.tf: |
    resource "aws_security_group" "web" {
      name = "web-sg"
      ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
      }
    }
  main.tf: |
    resource "aws_instance" "web" {
      ami                    = "ami-12345678"
      instance_type          = "t3.micro"
      vpc_security_group_ids = [aws_security_group.web.id]
    }
changed:
  security.tf: |
    resource "aws_security_group" "web" {
      name = "web-sg"
      ingress {
        from_port   = 443
        to_port     = 443
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
      }
    }
assertions:
  must_include:
    - aws_instance
options:
  commit_message: change to https
